добавила проект 1. Uber

--- a/1. Uber/src/sass/_general.sass
+++ b/1. Uber/src/sass/_general.sass
@@ -190,7 +190,7 @@ nav
 		color: #fff
 .mobile
 	padding: 48px 0 79px 0
-	height: 864px
+	min-height: 864px
 	background-image: url('../img/bg/mobile_bg.png') 
 	background-position: center center
 	background-size: cover
@@ -200,7 +200,7 @@ nav
 	&_item
 		margin: 0 auto 19px
 		padding-top: 92px
-		width: 320px
+		max-width: 320px
 		height: 280px
 		position: relative
 		&_1
