--- a/1. Uber/src/sass/_media.sass
+++ b/1. Uber/src/sass/_media.sass
@@ -16,10 +16,9 @@
         &_descr
             width: 300px
     .mobile
-        &_item 
-            width: 290px
+        &_item
             &_subtitle
-                font-size: 22px
+                font-size: 18px
     .choice 
         padding: 55px 0
         min-height: 840px
@@ -330,7 +329,8 @@
             width: 290px 
             &_main 
                 padding: 0
-                font-size: 14px
+                a
+                    font-size: 14px
             &_sub
                 flex-wrap: wrap
                 justify-content: center
